# archibox

./: README.md  pyproject.toml
archibox/: components.py  metrics.py  muon.py  trainer.py  utils.py
archibox/cifar/: architecture.py  supervised.py
archibox/eda/: sinusoidal_alignment.py
archibox/foveation/: main.py  multirotary.py  patching.py  patching_triton.py  train_mnist.py
archibox/gpt/: cached_fineweb10B.py  main.py
archibox/misc/: flowvis.py  lodim_flow.py  recover_fourier.py  rope_only_maps.py  the_best_schedule.py
archibox/mnist_gen/: arfsq.py  dataloading.py  fid.py  flow.py  fsq_autoregressive.py  fsq_inpaint.py  fsqlite_inpaint.py  guidance_test.py  idfsq.py  mean_flow.py  meanflow.py  simple_flow.py  unet_flow.py  vector_flow.py  vit_flow.py
archibox/ropend/: README.md  cifar_classification.py  cifar_generation.py  cifar_multiscale.py  dali_imagenet_loaders.py  imagenet_classification.py  imagenet_generalization.py  lattice.py  lattice_evaluation.py  positional_embeddings.py  rope_2d_vis.py  spacing_evaluation.py
sandbox/: components.py  muon.py
sandbox/cifar/: architecture.py  supervised.py
sandbox/gpt/: main.py
