[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "archibox"
version = "0.1"
dependencies = [
    "einops",
    "huggingface-hub",
    "matplotlib",
    "numpy",
    "opencv-python",
    "pandas",
    "pydantic",
    "pytest",
    "scipy",
    "seaborn",
    "torch",
    "torchvision",
    "tqdm",
    "wandb",
]

[tool.ruff]
line-length = 88
exclude = ["data", "runs"]

[tool.setuptools]
packages = ["archibox"]
